Added .editorconfig file, updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+###########
+# Editors #
+###########
 .idea
+.vscode
+*.code-workspace
+
+
+###########
+# Default #
+###########
+
 # Logs
 logs
 *.log
